# CIS1921Project

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
configs/: results_graphics.json
configs/presets/: aggressive_cut.json  budget_student.json  dense_training.json  infeasible_demo.json  lean_bulk.json  live_demo.json  tight_class_schedule.json  vegetarian_athlete.json
data/sample/: foods_sample.csv  penn_dining_sample.json  workouts_sample.json
notebooks/: exploration.ipynb
reports/: check_in.md  draft_outline.md  final_report.md
reports/presentation/: CIS1921_Final_Presentation.pptx  index.html
scripts/: generate_results_graphics.py  launch_live.py  launch_ui.py  make_outcome_metrics_figure.py  make_presentation_figures.py  record_demo.sh  run_demo.py  run_experiments.py  run_scaling_study.py
src/: __init__.py
src/app/: __init__.py  cli.py  live_server.py  streamlit_app.py
src/config/: __init__.py  settings.py
src/data_ingestion/: __init__.py  food_catalog.py  penn_dining.py  usda.py  workouts.py
src/evaluation/: __init__.py  metrics.py  validator.py
src/experiments/: __init__.py  instance_generator.py  presets.py  runner.py
src/models/: __init__.py  domain.py  enums.py
src/nutrition/: __init__.py  mip_model.py
src/scheduling/: __init__.py  (+2 more)
tests/: conftest.py  test_config_and_models.py  test_food_catalog.py  test_instance_generator.py  test_joint_solver.py  test_nutrition_solver.py  test_pantry_and_warmstart.py  test_scheduling.py  test_validator_and_metrics.py
(+14 files in other folders)
