[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "health-schedule-optimizer"
version = "0.1.0"
description = "Constraint-Based Training, Nutrition, and Health Schedule Optimizer (CIS 1921 final project)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Aryan Jeena" }, { name = "Aadithya Srinivasan" }]
license = { text = "MIT" }
dependencies = [
    "ortools>=9.10",
    "numpy>=1.26",
    "pandas>=2.1",
    "pydantic>=2.6",
    "matplotlib>=3.8",
    "streamlit>=1.32",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
hso-demo = "src.app.cli:demo"
hso-solve = "src.app.cli:solve"
hso-experiments = "src.app.cli:experiments"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
